[package]
name = "sellershut-services"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
async-trait = { version = "0.1.87", optional = true }
bb8 = { version = "0.9.0", optional = true }
bb8-redis = { version = "0.21.0", optional = true }
bon = "3.4.0"
redis = { version = "0.29.1", optional = true, default-features = false }
secrecy = { version = "0.10.3", optional = true }
serde = { version = "1.0.218", features = ["derive", "rc"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.3", optional = true, default-features = false }
thiserror = "2.0.12"
tokio = { version = "1.44.0", optional = true }
tracing = { version = "0.1.41", optional = true }
tracing-subscriber = { version = "0.3.19", optional = true }
url = { version = "2.5.4", optional = true }

[features]
default = []
api = []
tracing = ["dep:tracing", "tracing-subscriber/env-filter"]
postgres = ["sqlx/postgres", "url/serde", "secrecy/serde"]
cache = [
    "dep:redis",
    "redis/cluster-async",
    "redis/connection-manager",
    "redis/tokio-comp",
    "redis/sentinel",
    "tokio/sync",
    "dep:bb8",
    "dep:bb8-redis",
    "dep:async-trait",
    "url/serde"
]
tokio = ["dep:tokio"]

[[example]]
name = "tracing"
path = "examples/tracing.rs"
required-features = ["tracing"]

[dev-dependencies]
tokio = { version = "*", features = ["macros", "rt"] }
sqlx = { version = "*", features = ["runtime-tokio"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
