[package]
name = "stack-up"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
async-nats = { version = "0.41.0", optional = true }
bb8 = { version = "0.9.0", optional = true }
bb8-redis = { version = "0.23.0", optional = true }
bon = "3.4.0"
opentelemetry = { version = "0.30.0", optional = true, default-features = false }
opentelemetry-http = { version = "0.30.0", optional = true }
opentelemetry-otlp = { version = "0.30.0", default-features = false, optional = true }
opentelemetry-semantic-conventions = { version = "0.30.0", default-features = false, optional = true }
opentelemetry_sdk = { version = "0.30.0", default-features = false, optional = true }
redis = { version = "0.31.0", optional = true, default-features = false }
secrecy = { version = "0.10.3", optional = true }
serde = { version = "1.0.218", features = ["derive", "rc"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.3", optional = true, default-features = false }
thiserror = "2.0.12"
tokio = { version = "1.44.0", optional = true }
tonic = { version = "0.13.0", optional = true }
tracing = { version = "0.1.41", optional = true }
tracing-loki = { version = "0.2.6", optional = true, default-features = false, features = ["compat-0-2-1", "rustls"] }
tracing-opentelemetry = { version = "0.30.0", optional = true }
tracing-subscriber = { version = "0.3.19", optional = true }
url = { version = "2.5.4", optional = true }

[features]
default = []
api = []
cache = [
    "dep:redis",
    "redis/cluster-async",
    "redis/connection-manager",
    "redis/tokio-comp",
    "redis/sentinel",
    "tokio/sync",
    "dep:bb8",
    "dep:bb8-redis",
    "url/serde",
]
nats-core = ["dep:async-nats"]
nats-jetstream = ["dep:async-nats"]
opentelemetry = [
    "dep:opentelemetry",
    "dep:tracing-opentelemetry",
    "tracing",
    "opentelemetry_sdk/rt-tokio",
    "opentelemetry_sdk/trace",
    "opentelemetry/trace",
    "opentelemetry-http",
    "opentelemetry-otlp/grpc-tonic",
    "opentelemetry-otlp/http-proto",
    "opentelemetry-semantic-conventions/semconv_experimental",
]
postgres = ["sqlx/postgres", "url/serde", "secrecy/serde"]
tokio = ["dep:tokio"]
tracing = ["dep:tracing", "tracing-subscriber/env-filter"]
tonic = ["dep:tonic"]
tracing-loki = ["dep:tracing-loki", "tracing"]

[[example]]
name = "tracing"
path = "examples/tracing.rs"
required-features = ["tracing"]

[dev-dependencies]
tokio = { version = "*", features = ["macros", "rt"] }
sqlx = { version = "*", features = ["runtime-tokio"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
